Mantaflow cache doesn't work with ' character in path #79941

Closed
opened 2020-08-20 09:18:11 +02:00 by Andrew · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 18:28, hash: ce0bcd5fbf
Worked: Never

Short description of error
I found a bug due to which the simulation of liquid(at least) does not work.

Exact steps for others to reproduce the error
FluidInstance1.blend

  • Open file
  • Set domain cache to file path with ' character

Bake

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 18:28, hash: `ce0bcd5fbf` Worked: Never **Short description of error** I found a bug due to which the simulation of liquid(at least) does not work. **Exact steps for others to reproduce the error** [FluidInstance1.blend](https://archive.blender.org/developer/F8796057/FluidInstance1.blend) - Open file - Set domain cache to file path with `'` character # Bake
Author

Added subscriber: @LostSense

Added subscriber: @LostSense

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

It looks like error in python interface script - unescaped character

SyntaxError: invalid syntax
  File "<string>", line 1
    liquid_save_data_13('D:\\File's for creating game\\data', 250, '.uni', False)
                                  ^
SyntaxError: invalid syntax
It looks like error in python interface script - unescaped character ``` SyntaxError: invalid syntax File "<string>", line 1 liquid_save_data_13('D:\\File's for creating game\\data', 250, '.uni', False) ^ SyntaxError: invalid syntax ```
Richard Antalik changed title from Bug when trying to make a fluid simulation: to Mantaflow cache doesn't work with ' character in path 2020-08-26 04:53:42 +02:00

This issue was referenced by fec522be6a

This issue was referenced by fec522be6a0ffb895f169f305ace5eabc92855b8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-09-01 16:34:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79941
No description provided.