Fix T79941: mantaflow cache doesn't work with ' character in path

The fix is to escape the `'` character as well.

Reviewers: sebbas

Differential Revision: https://developer.blender.org/D8773